--- a/templates/draw.html
+++ b/templates/draw.html
@@ -194,6 +194,27 @@
                 </form>
                 <form class="form-horizontal">
                     <div class="form-group">
+                        <label class="col-lg-3 control-label">Convert string to composition</label>
+                        <input type="hidden" name="featurizer" value="strToComposition">
+                        <div class="col-lg-2">
+                            <select name="targetColumn" class="form-control"></select>
+                        </div>
+                        <div class="col-lg-1">
+                            <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode.parentNode)">
+                                <span class="glyphicon glyphicon-play"></span>
+                            </button>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="progress" style="display: none">
+                                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                    <span>Processing</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form class="form-horizontal">
+                    <div class="form-group">
                         <label class="col-lg-3 control-label">Convert structure to composition</label>
                         <input type="hidden" name="featurizer" value="structureToComposition">
                         <div class="col-lg-2">
