--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,7 @@
             </div>
             <div class="collapse navbar-collapse" id="my-nav">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Home </a></li>
-                    <li><a href="/result/">Result</a></li>
+                    <li><a href="/login/">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/logout/">Exit</a></li>
