--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,320 +6,36 @@
 {% endblock %}
 
 {% block content %}
-    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2 class="modal-title" id="myModalLabel">Confirmation</h2>
-                </div>
-                <form action="/submit/" method="post">
-                    {% csrf_token %}
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div id="calcList">
-                                </div>
-                                <button type="button" class="btn btn-default" onclick="selectAll(this)">
-                                    <span class="glyphicon glyphicon-plus"></span>
-                                </button>
-                                <button type="reset" class="btn btn-danger">
-                                    <span class="glyphicon glyphicon-refresh"></span>
-                                </button>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="form-group">
-                                    <label class="control-label">Select target column: </label>
-                                    <select name="columnAsTarget" class="form-control"></select>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">
-                            confirm
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <input id="jobId" type="hidden" value="{{ job_id }}">
-    <div id="upload" class="container" style="display: none">
-    <div style="height: 70px"></div>
+    <div id="upload" class="container">
+        <div style="height: 70px"></div>
         <div class="col-md-4 col-md-offset-4">
             <form enctype="multipart/form-data" class='form-login' action="/upload/" method="post">
                 {% csrf_token %}
                 <h2 class="text-center">Please Upload the file</h2>
                 <div style="height: 30px"></div>
-                <div id="file" class="form-group">
+                <div class="form-group">
                     <label>File：</label>
                     <div class="alert alert-warning" role="alert">
                         <label>Support file type: csv, json, pickle</label>
                     </div>
+                    <input type="hidden" name="job_id" value="{{ job_id }}">
+                    <input type="hidden" name="choose_data" value="{{ choose_data }}">
                     <input type="file" name='file'>
-                    <span style="color: red">{{ error }}</span>
                 </div>
-                <button type="reset" style="margin: 0 5px 0 5px" class="btn btn-default pull-right">reset</button>
-                <button type="submit" class="btn btn-primary pull-right">process</button>
+                {% if error %}
+                <div class="form-group">
+                    <div class="alert alert-danger" role="alert">{{ error }}</div>
+                </div>
+                {% endif %}
+                <div class="form-group">
+                    <button type="reset" class="btn btn-default">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
+                    <button type="submit" class="btn btn-success">
+                        <span class="glyphicon glyphicon-floppy-open"></span>
+                    </button>
+                </div>
             </form>
         </div>
     </div>
-    <div id="preprocess" class="container" style="display: none">
-        <div class="row">
-            <div class="col-lg-6">
-                <label class="col-lg-offset-4" style="font-size: xx-large">Preview</label>
-                <div id="table" class="table-responsive" style="height: 500px">
-                    {{ html }}
-                </div>
-                <div class="alert alert-warning" role="alert">
-                    <label>Please confirm and check the value above before submission!</label>
-                    <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target=".bs-example-modal-lg">
-                        submit
-                    </button>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <label class="col-lg-offset-4" style="font-size: xx-large">Conversion</label>
-                <br>
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Featurize structure</label>
-                        <div class="col-lg-3">
-                            <select name="targetColumn" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-3">
-                            <select name="featurizer" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-1">
-                            <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode.parentNode)">
-                                <span class="glyphicon glyphicon-play"></span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                <br>
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Featurize composition</label>
-                        <div class="col-lg-3">
-                            <select name="targetColumn" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-3">
-                            <select name="featurizer" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-1">
-                            <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode.parentNode)">
-                                <span class="glyphicon glyphicon-play"></span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                <br>
-                <label class="col-lg-offset-4" style="font-size: xx-large">Toolkit</label>
-                <br>
-                <form class="form-horizontal" action="/upload/" method="get">
-                    <div class="form-group">
-                        <input type="hidden" name="featurizer" value="rename">
-                        <label class="col-lg-3 control-label">Rename volume:</label>
-                        <div class="col-lg-3">
-                            <select name="targetColumn" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-4">
-                            <input class="form-control" name="value">
-                        </div>
-                        <div class="col-lg-1">
-                            <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode.parentNode)">
-                                <span class="glyphicon glyphicon-play"></span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                <form class="form-horizontal" action="/upload/" method="get">
-                    <div class="form-group">
-                        <label class="col-lg-6 control-label">Convert string to structure:</label>
-                        <input type="hidden" name="featurizer" value="strToStructure">
-                        <div class="col-lg-4">
-                            <select name="targetColumn" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode.parentNode)">
-                                <span class="glyphicon glyphicon-play"></span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                <form class="form-horizontal" action="/upload/" method="get">
-                    <div class="form-group">
-                        <label class="col-lg-6 control-label">Convert string to composition:</label>
-                        <input type="hidden" name="featurizer" value="strToComposition">
-                        <div class="col-lg-4">
-                            <select name="targetColumn" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode.parentNode)">
-                                <span class="glyphicon glyphicon-play"></span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                <form class="form-horizontal" action="/upload/" method="get">
-                    <div class="form-group">
-                        <label class="col-lg-6 control-label">Convert structure to composition:</label>
-                        <input type="hidden" name="featurizer" value="structureToComposition">
-                        <div class="col-lg-4">
-                            <select name="targetColumn" class="form-control"></select>
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode.parentNode)">
-                                <span class="glyphicon glyphicon-play"></span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                <div class="progress" style="display: none">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                        <span>Processing</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'js/preprocess.js' %}"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            let jobId = $("#jobId").val();
-            if (jobId != ""){
-                $("#preprocess").removeAttr("style");
-                decorateTable()
-            }
-            else {
-                $("#upload").removeAttr("style");
-            }
-            let selector = $("select[name='featurizer']");
-            $(selector[0]).html(structureFeaturizersSelector());
-            $(selector[1]).html(compositionFeaturizersSelector());
-            createChoice();
-        });
-
-        // Add style when loading new table
-        function decorateTable() {
-            $("table").addClass("table table-striped table-bordered text-nowrap");
-            createCalcList();
-            createChoice();
-        }
-
-        // Create structure choice while refresh table
-        function createChoice() {
-            let tableHead = $("thead");
-            let columns = tableHead.find("th");
-            let str = '<option>None</option>';
-            for (let i = 0; i < columns.length; i++){
-                let html = $(columns[i]).html();
-                if (html != ""){
-                    str += '<option value="' + html + '">' + html + '</option>'
-                }
-                let selector = $("select[name='targetColumn']");
-                for (let i = 0; i < selector.length; i++){
-                    $(selector[i]).html(str)
-                }
-            }
-        }
-
-        // Calculate new chemical features
-        function featurize(option) {
-            let progress = $(".progress");
-            progress.removeAttr("style");
-            let opt = $(option).serializeArray();
-            if (opt["targetColumn"] == '0'){
-                return 0
-            }
-            let optList = "?";
-            for (let i = 0; i < opt.length; i++){
-                optList += opt[i]["name"];
-                optList += "=" + opt[i]["value"] + "&"
-            }
-            optList = optList.slice(0, optList.length - 1);
-            $.ajax({
-                url: "/upload" + optList,
-                type: "GET",
-                success: function (retVal) {
-                    if (typeof (retVal["error"]) != "undefined" ) {
-                        console.log(retVal["error"])
-                    }
-                    else {
-                        let html = retVal['html'];
-                        $("#table").html(html);
-                        decorateTable();
-                    }
-                    progress.attr("style", "display: none")
-                },
-                error:function (msg) {
-                    progress.attr("style", "display: none");
-                    console.log(msg)
-                }
-            });
-        }
-
-        // Create calculate choice list
-        function createCalcList() {
-            let row = $(".table").children("tbody").children("tr");
-            let firstRow = $(row[0]);
-            let cellVals = firstRow.children("td");
-            let numList = [];
-            for (let i = 0; i < cellVals.length; i++){
-                let cellVal = $(cellVals[i]).html();
-                cellVal = Number(cellVal);
-                if (isNaN(cellVal)){}
-                else {
-                    numList.push(i)
-                }
-            }
-            let headRow = $(".table").children("thead").children("tr").children("th");
-            let headList = [];
-            for (let i = 0; i < headRow.length; i++){
-                let head = $(headRow[i]).html();
-                if (head != ""){
-                    headList.push(head)
-                }
-            }
-            let calcList = [];
-            for (let i = 0; i < numList.length; i++){
-                let index = numList[i];
-                calcList.push(headList[index])
-            }
-            // Create checkbox
-            let str = '';
-            for (let i = 0; i < calcList.length; i++){
-                if (calcList.length == 0){
-                    str += "No columns available";
-                    break
-                }
-                let column = calcList[i];
-                str += '<div class="checkbox"><label><input name=' + column + ' type="checkbox">';
-                str += column + '</label></div>'
-            } 
-            $("#calcList").html(str);
-            // Create choice for target column while submission
-            str = '';
-            for (let i = 0; i < calcList.length; i++){
-                if (calcList.length == 0){
-                    break
-                }
-                let column = calcList[i];
-                str += '<option value=' + column + '>';
-                str += column + '</option>'
-            }
-            $(".modal-body").find("select[name='columnAsTarget']").html(str)
-        }
-        
-        // Select all checkbox
-        function selectAll(ele) {
-            let checkboxes = $(ele).siblings().find("input");
-            for (let i = 0; i < checkboxes.length; i++){
-                $(checkboxes[i]).click();
-            }
-        }
-    </script>
 {% endblock %}
