--- a/templates/process.html
+++ b/templates/process.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+    {% if not processing %}
     <div id="preprocess" class="container">
         <div class="row">
             <label style="font-size: xx-large">Conversion</label>
@@ -115,34 +116,39 @@
         </div>
         <div class="row">
             <label style="font-size: xx-large">Preview</label>
-            <div class="progress" style="display: none">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                    Processing
-                </div>
-            </div>
             <div id="table" class="table-responsive" style="height: 500px">
                 {{ html }}
             </div>
         </div>
     </div>
+    {% else %}
+    <div style="position: fixed; opacity: 0.8; top: 0; bottom: 0; left: 0; right: 0; background-color: #333">
+        <div class="modal fade bs-example-modal-sm in" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" style="display: block">
+            <div class="modal-dialog modal-lg" role="document" style="top: 30%; text-align: center">
+                <label style="color: #ffffff; font-size: xx-large">
+                    The data is still under processing. Please come back later.
+                </label>
+                <div style="height: 20px"></div>
+                <div class="progress" style="margin-bottom: 0;">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                        Processing
+                    </div>
+                </div>
+                <div style="height: 70px"></div>
+                <a class="btn-lg btn-default" href="/home/"><span class="glyphicon glyphicon-home"></span></a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/preprocess.js' %}"></script>
     <script type="text/javascript">
+        console.log({{ processing }});
+
         $(document).ready(function(){
             let selector = $("select[name='featurizer']");
             $(selector[0]).html(structureFeaturizersSelector());
             $(selector[1]).html(compositionFeaturizersSelector());
-            decorate_table();
-        });
-
-        // Add style when loading new table
-        function decorate_table() {
-            $("table").addClass("table table-striped table-bordered text-nowrap");
-            create_target_columns_list();
-        }
-
-        // Create structure choice while refresh table
-        function create_target_columns_list() {
             let table_head = $("thead");
             let columns = table_head.find("th");
             let str = '<option>None</option>';
@@ -156,6 +162,6 @@
                     $(selector[i]).html(str)
                 }
             }
-        }
+        });
     </script>
 {% endblock %}
