edit confirm layout

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -13,10 +13,12 @@
             <div class="row">
                 <div class="col-lg-12">
                     <label class="control-label">Select columns for calculating: </label>
-                    <div class="form-inline" style="height: 50px; border: 1px solid #dbdbdb; border-radius: 5px; padding: 10px">
+                    <div class="form-inline" style="height: 100px; border: 1px solid #dbdbdb; border-radius: 5px; padding: 10px; overflow-y: scroll">
                         {% for column in columns %}
-                            <label class="control-label">{{ column }}:</label>
-                            <input class="checkbox" type="checkbox" name="{{ column }}">
+                            <div class="col-lg-4">
+                                <label class="control-label">{{ column }}:</label>
+                                <input class="checkbox" type="checkbox" name="{{ column }}">
+                            </div>
                         {% endfor %}
                     </div>
                     <br>
